<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/food_image"
    android:gravity="bottom"
    android:orientation="vertical"

    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:paddingLeft="10dp"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@mipmap/ic_launcher_round" />


</LinearLayout>


<ProgressBar
        android:id="@+id/nav_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="214dp"
        android:layout_marginLeft="154dp"
        android:layout_marginStart="154dp"
        tools:ignore="RtlCompat" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/nav_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:padding="5dp" />

    <View
        android:id="@+id/separetor"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/nav_recycler_view"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separetor"
        android:orientation="vertical"
        android:padding="7dp">

        <TextView
            android:id="@+id/feedback_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rate_us_tv"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/rate_us_tv"
            android:text="@string/send_feedback"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/rate_us_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/rate_us_on_play_store" />

        <TextView
            android:id="@+id/about_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/about" />

    </LinearLayout>

</RelativeLayout>
