<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="238dp"
    android:id="@+id/card_griditem"
    android:layout_height="238dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="4dp"
    card_view:cardCornerRadius="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shaded_color"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/image_view_col"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="157dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/name_of_restaurants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_view_col"
                android:padding="5sp"
                android:text="@string/restaurants"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/address_of_restaurants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_of_restaurants"
                android:layout_marginLeft="5dp"
                android:padding="5sp"
                android:text="@string/address"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/cusinies"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_of_restaurants"
                android:padding="5sp"
                android:layout_marginLeft="5dp"
                android:text="@string/cusinies"
                android:textColor="@color/colorWhite"
                android:textSize="10sp"
                android:layout_marginStart="5dp" />

        </RelativeLayout>

</android.support.v7.widget.CardView>