<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/card_griditem"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="4dp"
    card_view:cardCornerRadius="3dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:paddingRight="0dp"
            android:paddingEnd="0dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image_view_col"
                android:layout_width="match_parent"
                android:layout_height="129dp"
                android:scaleType="fitXY"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true" />

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center" />
            </RelativeLayout>

            <TextView
                android:id="@+id/name_of_restaurants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="15dp"
                android:padding="@dimen/local_padding"
                android:text="@string/restaurants"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/address_of_restaurants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/name_of_restaurants"
                android:layout_below="@+id/name_of_restaurants"
                android:padding="@dimen/local_padding"
                android:text="@string/address"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:layout_alignLeft="@+id/name_of_restaurants" />

            <TextView
                android:id="@+id/cusinies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_of_restaurants"
                android:layout_alignStart="@id/name_of_restaurants"
                android:padding="@dimen/local_padding"
                android:text="@string/cusinies"
                android:textColor="@color/colorBlack"
                android:textSize="10sp"
                android:layout_alignLeft="@id/name_of_restaurants" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

