<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.common.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/find_current_location"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/find_current_location"
        android:layout_marginTop="28dp"
        android:text="@string/your_location" />

    <TextView
        android:id="@+id/current_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/change_location"
        android:layout_marginLeft="61dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="57dp"
        android:maxLines="3" />

    <ImageButton
        android:id="@+id/find_current_location"
        android:layout_width="20dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/current_location"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:background="@color/colorPrimaryWhite"
        android:src="@drawable/ic_location" />

    <TextView
        android:id="@+id/change_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/current_location"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/change_location"
        android:textColor="@android:color/holo_blue_bright"
        android:textStyle="italic|bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/current_location"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/recommendation_text"
            android:layout_margin="6dp">


            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="14dp"
                android:background="@drawable/round_background"
                android:drawableLeft="@drawable/ic_search"
                android:ems="10"
                android:hint="@string/search_for_resturant_cuisine_or_dishes"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:layout_toLeftOf="@id/search_with_meals"
                android:paddingBottom="3dp"
                android:paddingLeft="3dp"
                android:paddingTop="3dp"
                android:paddingRight="3dp"
                android:textSize="14dp"
                android:textColor="@color/colorBlack" />


            <TextView
                android:id="@+id/search_with_meals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/location"
                android:layout_alignParentEnd="true"
                android:padding="3dp"
                android:gravity="center"
                android:text="search"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="15dp"
                android:textStyle="italic|bold" />


            <FrameLayout
                android:id="@+id/fragment_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/recommendation_text"
                android:paddingLeft="7dp"
                android:paddingStart="7dp">


            </FrameLayout>

            <TextView
                android:id="@+id/recommendation_text"
                android:layout_width="311dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/location"
                android:layout_marginEnd="-84dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="-84dp"
                android:layout_marginStart="8dp"
                android:padding="9dp"
                android:text="@string/recommendations_for_you"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:visibility="gone" />


            <ProgressBar
                android:id="@+id/fetch_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp" />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
